[project]
name = "opensandbox-plus-server"
version = "0.1.0"
description = "Managed OpenSandbox control plane"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "asyncpg>=0.29",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyjwt[crypto]>=2.9",
  "sqlalchemy[asyncio]>=2.0",
  "structlog>=24.2",
  "uvicorn[standard]>=0.30",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["opensandbox_plus*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
